Add listing sorting by date_added functionality.

--- a/app/templates/components/listing-tile.hbs
+++ b/app/templates/components/listing-tile.hbs
@@ -1,2 +1,6 @@
-<li><h4><small>{{listing.date_added}}</small>{{#linkTo 'listing' listing.id}} {{listing.title}}{{/linkTo}}<small-black> - ${{listing.price}} ({{listing.location}})</small-black></h4>
-</li>
+<ul>
+  {{#each sortedListings as |listing|}}
+    <li><h4><small>{{listing.date_added}}</small>{{#linkTo 'listing' listing.id}} {{listing.title}}{{/linkTo}}<small-black> - ${{listing.price}} ({{listing.location}})</small-black></h4>
+    </li>
+  {{/each}}
+</ul>
