--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -3,8 +3,8 @@
 </center>
 <div class="home-container">
   <h3>Categories:</h3>
-  
-  {{category-tile categories=model}}
+
+  {{sorted-categories categories=model}}
 
   {{new-category save2='save3'}}
 </div>
