--- a/app/templates/category.hbs
+++ b/app/templates/category.hbs
@@ -6,11 +6,9 @@
 <div class="container-fluid">
   <h3>Below are listings for {{model.name}}:</h3>
 
-  <ul>
-    {{#each model.listings as |listing|}}
-      {{listing-tile listing=listing}}
-    {{/each}}
-  </ul>
+  {{listing-tile listings=model.listings}}
+
   <br>
+
   {{new-listing saveListing="saveListing" category=model}}
 </div>
