--- a/app/templates/components/update-category.hbs
+++ b/app/templates/components/update-category.hbs
@@ -7,7 +7,7 @@
           {{input value=category.name id="name"}}
         </div>
 
-        <button class="btn btn-success" {{action 'update' category}}>Save</button>
+        <button class="btn btn-success btn-xs" {{action 'update' category}}>Save</button>
       </form>
     </div>
 {{else}}
