--- a/app/templates/components/update-listing.hbs
+++ b/app/templates/components/update-listing.hbs
@@ -35,7 +35,7 @@
           {{textarea value=listing.contact_info id="contact_info" class="form-control"}}
         </div>
 
-        <button class="btn btn-success" {{action 'update' listing}}>Save</button>
+        <button class="btn btn-success btn-xs" {{action 'update' listing}}>Save</button>
       </form>
     </div>
 {{else}}
